--- a/css/styles.css
+++ b/css/styles.css
@@ -174,3 +174,11 @@ textarea {
     align-items: center;
     justify-content: center;
 }
+
+.tabla {
+    text-align: center;
+}
+
+.tabla {
+    margin-bottom: 5rem;
+}
